@@ -15,11 +15,14 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import org.springframework.security.web.authentication.HttpStatusEntryPoint;
+import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.springframework.scheduling.annotation.EnableAsync;
+
+import com.tradex.api.config.AppProperties;
 
 @Configuration
 @EnableWebSecurity
@@ -28,9 +31,11 @@ import org.springframework.scheduling.annotation.EnableAsync;
 public class SecurityConfig {
 
     private final JwtAuthenticationFilter jwtAuthFilter;
+    private final AppProperties appProperties;
 
-    public SecurityConfig(JwtAuthenticationFilter jwtAuthFilter) {
+    public SecurityConfig(JwtAuthenticationFilter jwtAuthFilter, AppProperties appProperties) {
         this.jwtAuthFilter = jwtAuthFilter;
+        this.appProperties = appProperties;
     }
 
     @Bean
@@ -48,6 +53,7 @@ public class SecurityConfig {
                 )
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                         .requestMatchers("/api/auth/**", "/h2-console/**").permitAll()
                         .anyRequest().authenticated())
                 .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
@@ -58,10 +64,30 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173", "http://localhost:3000"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Cookie"));
+        List<String> patterns = appProperties.getCors().getAllowedOriginPatterns();
+        if (patterns != null && !patterns.isEmpty()) {
+            configuration.setAllowedOriginPatterns(patterns);
+        } else {
+            configuration.setAllowedOriginPatterns(List.of(
+                    "http://localhost",
+                    "http://localhost:*",
+                    "http://127.0.0.1",
+                    "http://127.0.0.1:*",
+                    "https://localhost",
+                    "https://localhost:*",
+                    "http://10.0.2.2",
+                    "http://10.0.2.2:*",
+                    "http://192.168.*:*",
+                    "http://10.*:*",
+                    "https://tradenows.com",
+                    "https://www.tradenows.com",
+                    "https://*.tradenows.com"));
+        }
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS", "HEAD"));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setExposedHeaders(List.of("Authorization", "Set-Cookie"));
         configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
